# SapdZonas

./: .gitignore  CMakeLists.txt
src/: ZoneManager.cpp  ZoneManager.h  main.cpp  plugin.cpp  plugin.h
src/Utils/: MinhookWrapper.hpp
src/models/: Zone.h
src/samp/: samp.h
